Fix slider
Images got distorted, probably because of the flexbox.

--- a/content/themes/elements/sass/modules/content/_section.scss
+++ b/content/themes/elements/sass/modules/content/_section.scss
@@ -16,12 +16,6 @@ section{
   .section-header{
     margin-bottom: $section-spacing / 2;
   }
-
-  .section-body{
-    width: 100%;
-    max-width: 1280px;
-    margin: auto;
-  }
 }
 
 .section-header{
