--- a/content/themes/elements/sass/modules/slider/_slider-bullets.scss
+++ b/content/themes/elements/sass/modules/slider/_slider-bullets.scss
@@ -31,3 +31,9 @@
     }
   }
 }
+
+@media #{$medium-down}{
+  .slider-bullets{
+    bottom: .5em;
+  }
+}
