--- a/content/themes/elements/sass/modules/slider/_slider.scss
+++ b/content/themes/elements/sass/modules/slider/_slider.scss
@@ -5,6 +5,10 @@ $ratio: (1 / 2) * 100%; // 2:1
 
   padding-left: 0;
   padding-right: 0;
+
+  .section-body{
+    width: 100%;
+  }
 }
 
 // Setting ratio of image
@@ -16,35 +20,52 @@ $ratio: (1 / 2) * 100%; // 2:1
 // Gallery: images
 .slider-images{
   top: 0;
-  left: calc(5% + (#{$column-gutter} / 2));
+  left: 10%;
   position: relative;
 
-  width: calc(90% - #{$column-gutter});
+  width: 80%;
   overflow: hidden;
 
   list-style: none;
 
   li{
-    @include hide( .3s );
-    @include flex;
-    @include justify-content( center );
-
-    top: 0;
-    left: 0;
-    position: absolute;
-
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: .5s;
 
     img{
-      height: 100%;
+      @include transform( translate(-50%, -50%) );
+
+      top: 50%;
+      left: 50%;
+
       width: auto;
       max-width: none;
+      height: 100%;
       display: block;
     }
 
     &.is-active{
       @include show( .3s );
+    }
+  }
+}
+
+@media #{$medium-down}{
+  .slider{
+    .section-body{
+      width: 100%;
+    }
+
+    .slider-images{
+      left: 0;
+
+      width: 100%;
     }
   }
 }
